--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/irctc?createTableIfNotExists=true
+spring.datasource.url=jdbc:mysql://localhost:3306/accio_irctc?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Shravan@844
 spring.jpa.hibernate.ddl-auto=update
 
